Background concept added
Ability to chain up a background for re-use in your other tests.

--- a/src/MyCucumber.Example/MyCucumber.Example.csproj
+++ b/src/MyCucumber.Example/MyCucumber.Example.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Cucumber.cs" />
+    <Compile Include="BackgroundTests.cs" />
     <Compile Include="KeepItInFamilyTests.cs" />
     <Compile Include="UsingDelegateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
